deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: garderobus-api
  namespace: garderobus
  labels:
    app: garderobus-api
spec:
  selector:
    app: garderobus-api
  ports:
    - name: http
      port: 80
      targetPort: http
  type: ClusterIP
